# rtr23-fairyforest

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json  vcpkg.json
src/: application.cpp  application.hpp  camera.cpp  camera.hpp  context.cpp  context.hpp  fairy_forest.hpp  window.cpp  window.hpp
src/backend/: backend.hpp  backend.inl  command_buffer.cpp  command_buffer.hpp  core.hpp  device.cpp  device.hpp  features.cpp  features.hpp  fsr.cpp  fsr.hpp  gpu_resource_table.cpp  gpu_resource_table.hpp  instance.cpp  instance.hpp  pipeline.cpp  pipeline.hpp  slotmap.hpp  swapchain.cpp  swapchain.hpp
src/rendering/: renderer.cpp  renderer.hpp
src/scene/: asset_processor.cpp  asset_processor.hpp  scene.cpp  scene.hpp
src/shaders/: esm_first_pass.comp  esm_second_pass.comp  mesh_draw.frag  mesh_draw.vert  particles.comp  particles.frag  particles.geom  particles.vert  particules.comp  prepass.frag  prepass.vert  shadow_pass.frag  shadow_pass.vert  ssao.comp  ssao_no_shared.comp  test.comp  triangle.frag  triangle.vert  write_shadow_matrices.comp
src/shaders/main_pass/: mesh_draw.frag  mesh_draw.vert
src/shaders/prepass/: prepass.frag  prepass.vert  prepass_discard.frag
src/shaders/screen_space/: fog_pass.comp  minmax_first_pass.comp  minmax_subseq_pass.comp  ssao.comp
src/shaders/shadows/: shadow_pass.frag  shadow_pass.vert  shadow_pass_discard.frag  write_shadow_matrices.comp
src/shaders/util/: normals_compress.glsl
src/shared/: particles.inl  particules.inl  scene.inl  shared.inl  ssao.inl
